fix border-radius on safari

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -387,7 +387,7 @@ nav {
     }
   }
   .locationcard {
-    border-radius: 1rem 1rem 0px 0px;
+    border-radius: 1.5rem 1.5rem 0px 0px;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -399,7 +399,7 @@ nav {
     pointer-events: auto;
     transform: translateY(100%);
     transition: transform 0.5s;
-    outline: var(--borderbtn);
+    box-shadow: 0px 0px 0px 3px black;
     padding: var(--ppx) var(--px);
     > * {
       margin-top: var(--ggap);
